--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
 .content {
   margin-left: 270px; 
-  margin-right: 270px;
+  margin-right: 285px;
   font-size: 28px;
   line-height: 1.6;
 }
@@ -19,7 +19,7 @@
 .sub-sidebar {
   position: fixed;
   display: none;
-  right:0;
+  right:25px;
   top: 10%; 
   font-size: 22px;
 }
