--- a/index.html
+++ b/index.html
@@ -90,7 +90,84 @@
 
   <div id="Reading Comprehension" class="section"> 
     <h2>Reading Comprehension</h2>
-    <p>Content for Reading Comprehension here...</p>
+    <p>1、选择题有几道，就把文章分为几个部分</p>
+    <p>第一题，对应第一部分，以此类推</p>
+    <br>
+    <p>2、文章的重点</p>
+    <p>你放心，和语文论述类语文一样</p>
+    <p>在于议论句，大部分情况下也在每段的首尾句</p>
+    <p>而在这开头和结尾，你要学会根据一些形容词和副词，来判断作者的态度，这个懂的都懂</p>
+    <br>
+    <p>3、选项的重点在哪里</p>
+    <p>重点，即题眼</p>
+    <p>是在修饰词前后的那个名词，通常出现在材料的后半部分</p>
+    <p>也就是说，修饰词和名词对的上，就能入选</p>
+    <br>
+    <p>举个例子</p>
+    <p>A.enhance bankers’ sense of responsibility</p>
+    <p>在这一句里，重点有且仅有enhance banker</p>
+    <p>主体是banker，动作是enhance</p>
+    <br>
+    <p>再举一个例子</p>
+    <p>A.Better business’ relation with states</p>
+    <p>重点有且仅有 better 和 states，其他部分卵用没有</p>
+    <br>
+    <p>4、做题的顺序</p>
+    <p>第一步，直接读题目，再回去看文章</p>
+    <p>目的在于确定题眼并尝试推断文章主题</p>
+    <p>大多数题目基本很难直接像四六级一样直接推出文章主体</p>
+    <p>所以确定题眼为主</p>
+    <br>
+    <p>第二步，用各题题眼简单确定段落范围</p>
+    <p>如果你看到第二题有名词定位，那么直接定位到那里</p>
+    <p>前面的就是第一段的材料，以此类推</p>
+    <p>这一步对于那些段落很少的文章，就显得很没必要</p>
+    <p>但是对于那些每段很少的文章，基本都要用下一题帮助定位</p>
+    <p>一般绝大多数题都要用到，特别是CD篇</p>
+    <br>
+    <p>第三步，找到选项中的名词、动词、形容词，其他一律掉丢</p>
+    <p>名词就是动作的发出或者承受者或是专有名词，可能有1-2个</p>
+    <p>这种主体词的作用就是定位，能帮你快速定位到材料的某句话</p>
+    <p>形容词和动词是一种感觉，找到后要找同义词</p>
+    <p>要的不是具体的意思，而是一种抽象的东西，我更愿意说成是情感</p>
+    <p>比如什么happy啊、encourage啊，就是好的，你不要翻译的太具体，好的就是积极向上就行了，所以是一种向上的感觉</p>
+    <p>具体对应到原文可能是什么乐观啊什么的，这个你要知道，它就喜欢这么玩</p>
+    <br>
+    <p>第四步，根据材料名词/形容词动词，定位文章的具体内容</p>
+    <p>有时是主体对不上，形容词动词对的上</p>
+    <p>有的时候是动词形容词对不上，主体对的上</p>
+    <p>一般一个拿来定位，另一个拿来具体判断</p>
+    <br>
+    <p>第五步，找议论句，结合首尾句判断论点</p>
+    <p>首尾句不一定需要，重点是议论句</p>
+    <p>首段吹水时二段首句、关联词首尾、长段落首尾句、简短句</p>
+    <p>一般都是在这里面，难一点的可能放在长难句的后半部分</p>
+    <br>
+    <p>第六步，简单翻译原文，看能否和选项完美对应</p>
+    <p>重点在于：题眼+形容词/动词</p>
+    <p>形容词绝对优先，优先级10000%，对不上就不能选</p>
+    <p>接下来才去比对名词，判断程度、因果什么的</p>
+    <p>关键词对不上但意思有点联系就保留</p>
+    <p>有更好的就不选这个，没有更好的就选这个</p>
+    <br>
+    <p>第七步，用句子结构与核心论点再比对</p>
+    <p>一般是针对最后一题的概述</p>
+    <p>用首尾段推核心论点</p>
+    <p>这时候讲究几个点</p>
+    <p>1)文章中间段出现过的不选</p>
+    <p>2)首尾两段只出现一次的不选</p>
+    <p>3)上帝视角/b格高/道理多+看不懂，选</p>
+    <br>
+    <p>句子结构就是通过文中的一些词来判断情感色彩</p>
+    <p>一般来说负面情绪最管用，可以直接秒</p>
+    <br>
+    <p>5)速通</p>
+    <p>比对名词+形容词/动词+题眼</p>
+    <p>一般第一段和最后一段要精读，李姐意思</p>
+    <p>其他段找首尾句+议论句，还不行用核心论点/句子结构</p>
+    <br>
+    <p>6)不做题没啥屌用</p>
+    <br>
   </div>
 
   <div id="Reading Comprehension-sub-menu" class="sub-sidebar">
