--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 
     <p>3) Emotional judgment: when someone says, "You are nice, but, XXX," it implies a negative. You must learn to combine emotional words with conjunctions to make judgments. Also, note the use of progressive and coordinate structures, as in "You are good, you are very good, but there's better." Hence, the conjunctions and sentence relationships taught in elementary school Chinese may be surprisingly crucial here.</p>
 
+    <p>4）If you have understood this, then your vocabulary is at least sufficient.Prepare to embark on a journey and face the tumultuous waves, ready to stir up a storm.</p>
+    
+    <br>
   </div>
 
   <div id="Cloze" class="section">
