--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
     <p>其他段找首尾句+议论句，还不行用核心论点/句子结构</p>
     <br>
     <p>6)不做题没啥屌用</p>
+    <p>个人感觉最重要的其实是几个做题的步骤，然后通过做题去细化，这个每个人细化的结果不一样</p>
+    <p>这个只能作为一个骨架，你要用做题去再给细化，比如什么题用论点好什么题用情感好，都是要做题的</p>
     <br>
   </div>
 
