--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   position: fixed;
   top: 10%;
   height: 100%;
+  left:30px;
   font-size: 22px;
 }
   
 .content {
-  margin-left: 285px; 
+  margin-left: 350px; 
   margin-right: 285px;
   font-size: 28px;
   line-height: 1.6;
@@ -19,7 +20,7 @@
 .sub-sidebar {
   position: fixed;
   display: none;
-  right:25px;
+  right:30px;
   top: 10%; 
   font-size: 22px;
 }
