--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <div class="content">
   <div id="intro" class="section active">
     <h2>Introduction</h2>
-   
+    <h3>Preface</h3>
     <p>This is a purely personal strategy guide for the Postgraduate Entrance Examination English Test I, encompassing four sections: cloze tests, reading comprehension, new question types, and translation.
 
     The purpose of this guide is to explore a method akin to exploiting a 'speedrun bug' in a game for quickly navigating through the actual English test questions.
@@ -83,8 +83,9 @@
     <p>3) Emotional judgment: when someone says, "You are nice, but, XXX," it implies a negative. You must learn to combine emotional words with conjunctions to make judgments. Also, note the use of progressive and coordinate structures, as in "You are good, you are very good, but there's better." Hence, the conjunctions and sentence relationships taught in elementary school Chinese may be surprisingly crucial here.</p>
 
     <p>4）If you have understood this, then your vocabulary is at least sufficient.Prepare to embark on a journey and face the tumultuous waves, ready to stir up a storm.</p>
-    
     <br>
+    <h3>Log</h3>
+    <p>2024-01-06:Added "2019 Reading Comprehension" material to the Reading Comprehension</p>
   </div>
 
   <div id="Cloze" class="section">
