--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <p>4）If you have understood this, then your vocabulary is at least sufficient.Prepare to embark on a journey and face the tumultuous waves, ready to stir up a storm.</p>
     <br>
     <h3>Log</h3>
-    <p>2024-01-06:Added "2019 Reading Comprehension" material to the Reading Comprehension</p>
+    <p>2024-01-06: Added "2019 Reading Comprehension" to the Reading Comprehension</p>
   </div>
 
   <div id="Cloze" class="section">
