--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <div class="sidebar">
   <ul id="top-menu">
     <li><a href="#" data-target="intro">Introduction</a></li>
+    <li><a href="#" data-target="Changelog">Changelog</a></li>
     <li><a href="#" data-target="Cloze">Cloze</a></li>
     <li><a href="#" data-target="Reading Comprehension">Reading Comprehension</a></li>
     <li><a href="#" data-target="New question types">New question types</a></li>
@@ -67,7 +68,6 @@
 <div class="content">
   <div id="intro" class="section active">
     <h2>Introduction</h2>
-    <h3>Preface</h3>
     <p>This is a purely personal strategy guide for the Postgraduate Entrance Examination English Test I, encompassing four sections: cloze tests, reading comprehension, new question types, and translation.
 
     The purpose of this guide is to explore a method akin to exploiting a 'speedrun bug' in a game for quickly navigating through the actual English test questions.
@@ -84,10 +84,14 @@
 
     <p>4）If you have understood this, then your vocabulary is at least sufficient.Prepare to embark on a journey and face the tumultuous waves, ready to stir up a storm.</p>
     <br>
-    <h3>Log</h3>
-    <p>2024-01-06: Added "2019 Reading Comprehension" to the Reading Comprehension</p>
   </div>
 
+    <div id="Changelog" class="section">
+      <h2>ChangeLog</h2>
+      <p>2024-01-04: Created the web page structure.</p>
+      <p>2024-01-06: Added "2019 reading " to the Reading Comprehension.</p>
+  </div>
+      
   <div id="Cloze" class="section">
     <h2>Cloze</h2>
     <p>Content for Cloze here...</p>
