--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <div class="sidebar">
   <ul id="top-menu">
     <li><a href="#" data-target="intro">Introduction</a></li>
+    <li><a href="#" data-target="Schedule">Schedule</a></li>
     <li><a href="#" data-target="Changelog">Changelog</a></li>
     <li><a href="#" data-target="Cloze">Cloze</a></li>
     <li><a href="#" data-target="Reading Comprehension">Reading Comprehension</a></li>
@@ -86,12 +87,18 @@
     <br>
   </div>
 
-    <div id="Changelog" class="section">
+  <div id="Changelog" class="section">
       <h2>ChangeLog</h2>
       <p>2024-01-04: Created the web page structure.</p>
       <p>2024-01-06: Added "2019 reading" to the Reading Comprehension.</p>
   </div>
-      
+
+  <div id="Schedule" class="section">
+    <h2>Schedule</h2>
+    <p>While the schedule may not be a perfect oracle of what's to come,</p>
+    <p>it is my aspiration that it serves as a faithful chronicle of our journey.</p>
+  </div>
+  
   <div id="Cloze" class="section">
     <h2>Cloze</h2>
     <p>Content for Cloze here...</p>
