--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
   line-height: 1.6;
 }
   
+  h1{
+      color: rgba(114, 182, 202);
+  }
+  
+  h2{
+  color:rgba(137, 160, 245, 0.7);
+  }
+  h3{
+  color: rgba(118, 155, 202, 0.8);
+  }
+  p {
+    
+}
+  
 .sub-sidebar {
   position: fixed;
   display: none;
