--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
     
 }
   
+body.dark-theme {
+  background-color: #333;
+  color: #eee;
+}
+  
+#theme-toggle {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+}
+  
 .sub-sidebar {
   position: fixed;
   display: none;
@@ -67,7 +78,12 @@
 </head>
 <body>
 
+
+  
 <h1>Fucking-Postgraduate-English-Mastery-Guide</h1>
+
+<button id="theme-toggle">切换主题</button>
+  
 <div class="sidebar">
   <ul id="top-menu">
     <li><a href="#" data-target="intro">Introduction</a></li>
@@ -251,6 +267,12 @@ $sidebarLinks.forEach(link => {
       }
     });
   });
+});
+  
+const toggle = document.getElementById('theme-toggle');
+
+toggle.addEventListener('click', () => {
+  document.body.classList.toggle('dark-theme');
 });
   
 </script>
