--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body.dark-theme {
   
 <h1>Fucking-Postgraduate-English-Mastery-Guide</h1>
 
-<button id="theme-toggle">切换主题</button>
+<button id="theme-toggle">Change Theme</button>
   
 <div class="sidebar">
   <ul id="top-menu">
