--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 <style>
+.sidebar li a { 
+  color: #00BFFF
+}
+
+.sub-sidebar li a { 
+  color: #9370DB
+}
+  
+  
 .sidebar {
   position: fixed;
   top: 10%;
@@ -18,14 +27,15 @@
 }
   
   h1{
-      color: rgba(114, 182, 202);
+      color: #FF4500
   }
   
   h2{
-  color:rgba(137, 160, 245, 0.7);
+  color:#77DD77
   }
   h3{
-  color: rgba(118, 155, 202, 0.8);
+  color:rgba(137, 160, 245, 0.7);
+  font-size:28px;
   }
   
 body.dark-theme {
@@ -138,13 +148,13 @@ body.dark-theme {
     <br>
     <p>2、文章的重点</p>
     <p>你放心，和语文论述类语文一样</p>
-    <p>在于议论句，大部分情况下也在每段的首尾句</p>
+    <h3>在于议论句，大部分情况下也在每段的首尾句</h3>
     <p>而在这开头和结尾，你要学会根据一些形容词和副词，来判断作者的态度，这个懂的都懂</p>
     <br>
     <p>3、选项的重点在哪里</p>
     <p>重点，即题眼</p>
     <p>是在修饰词前后的那个名词，通常出现在材料的后半部分</p>
-    <p>也就是说，修饰词和名词对的上，就能入选</p>
+    <h3>也就是说，修饰词和名词对的上，就能入选</h3>
     <br>
     <p>举个例子</p>
     <p>A.enhance bankers’ sense of responsibility</p>
@@ -156,50 +166,50 @@ body.dark-theme {
     <p>重点有且仅有 better 和 states，其他部分卵用没有</p>
     <br>
     <p>4、做题的顺序</p>
-    <p>第一步，直接读题目，再回去看文章</p>
+    <h3>第一步，直接读题目，再回去看文章</h3>
     <p>目的在于确定题眼并尝试推断文章主题</p>
     <p>大多数题目基本很难直接像四六级一样直接推出文章主体</p>
     <p>所以确定题眼为主</p>
     <br>
-    <p>第二步，用各题题眼简单确定段落范围</p>
+    <h3>第二步，用各题题眼简单确定段落范围</h3>
     <p>如果你看到第二题有名词定位，那么直接定位到那里</p>
     <p>前面的就是第一段的材料，以此类推</p>
     <p>这一步对于那些段落很少的文章，就显得很没必要</p>
     <p>但是对于那些每段很少的文章，基本都要用下一题帮助定位</p>
     <p>一般绝大多数题都要用到，特别是CD篇</p>
     <br>
-    <p>第三步，找到选项中的名词、动词、形容词，其他一律掉丢</p>
+    <h3>第三步，找到选项中的名词、动词、形容词，其他一律掉丢</h3>
     <p>名词就是动作的发出或者承受者或是专有名词，可能有1-2个</p>
     <p>这种主体词的作用就是定位，能帮你快速定位到材料的某句话</p>
     <br>
-    <p>形容词和动词是一种感觉，找到后要找同义词</p>
+    <h3>形容词和动词是一种感觉，找到后要找同义词</h3>
     <p>要的不是具体的意思，而是一种抽象的东西，我更愿意说成是情感</p>
     <p>比如什么happy啊、encourage啊，就是好的，你不要翻译的太具体，好的就是积极向上就行了，所以是一种向上的感觉</p>
     <p>具体对应到原文可能是什么乐观啊什么的，这个你要知道，它就喜欢这么玩</p>
     <br>
-    <p>第四步，根据材料名词/形容词动词，定位文章的具体内容</p>
+    <h3>第四步，根据材料名词/形容词动词，定位文章的具体内容</h3>
     <p>有时是主体对不上，形容词动词对的上</p>
     <p>有的时候是动词形容词对不上，主体对的上</p>
     <p>一般一个拿来定位，另一个拿来具体判断</p>
     <br>
-    <p>第五步，找议论句，结合首尾句判断论点</p>
+    <h3>第五步，找议论句，结合首尾句判断论点</h3>
     <p>首尾句不一定需要，重点是议论句</p>
     <p>首段吹水时二段首句、关联词首尾、长段落首尾句、简短句</p>
     <p>一般都是在这里面，难一点的可能放在长难句的后半部分</p>
     <br>
-    <p>第六步，简单翻译原文，看能否和选项完美对应</p>
+    <h3>第六步，简单翻译原文，看能否和选项完美对应</h3>
     <p>重点在于：题眼+形容词/动词</p>
     <br>
-    <p>形容词绝对优先，优先级10000%，对不上就不能选</p>
+    <h3>形容词绝对优先，优先级10000%，对不上就不能选</h3>
     <br>
     <p>接下来才去比对名词，判断程度、因果什么的</p>
     <p>关键词对不上但意思有点联系就保留</p>
     <p>有更好的就不选这个，没有更好的就选这个</p>
     <br>
-    <p>第七步，用句子结构与核心论点再比对</p>
+    <h3>第七步，用句子结构与核心论点再比对</h3>
     <p>一般是针对最后一题的概述</p>
     <br>
-    <p>用首尾段推核心论点</p>
+    <h3>用首尾段推核心论点</h3>
     <p>这时候讲究几个点</p>
     <p>1)文章中间段出现过的不选</p>
     <p>2)首尾两段只出现一次的不选</p>
