--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
   h1{
       position: relative;
-      right: -300px; /* 向右偏移20像素 */
+      right: -380px;
       color: #FF4500
   }
   
@@ -48,7 +48,7 @@ body.dark-theme {
 #theme-toggle {
   position: fixed;
   top: 30px;
-  right: 80px;
+  left: 80px;
 }
   
 .sub-sidebar {
