--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 }
   
   h1{
-      position: relative;
-      right: -380px;
+      font-size:40px;
       color: #FF4500
   }
   
@@ -102,7 +101,7 @@ body.dark-theme {
 </div>
 
 <div class="content">
-  <h1>Fucking-Postgraduate-English-Mastery-Guide</h1>
+  <h1>The Graceful English Speedrun</h1>
   <div id="intro" class="section active">
     <h2>Introduction</h2>
     <p>This is a purely personal strategy guide for the Postgraduate Entrance Examination English Test I, encompassing four sections: cloze tests, reading comprehension, new question types, and translation.
