--- a/index.html
+++ b/index.html
@@ -132,6 +132,20 @@ body.dark-theme {
     <h2>Schedule</h2>
     <h3>While the schedule may not be a perfect oracle of what's to come,</h3>
     <h3>it is my aspiration that it serves as a faithful chronicle of our journey.</h3>
+    <p>The preliminary plan is to finish reading comprehension and cloze tests from 2010 to 2019, a total of 10 years, before February 2024. </p>
+    <p>Then it will take around 2 more months to go over reading comprehension and cloze tests from 2000 to 2009. </p>
+    <p>Finally, another 2 months will be spent on new question types and translation exercises from 2000 to 2019. </p>
+    <p>The specifics are still to be determined.</p>
+    <br>
+    <p>In summary:</p>
+    <p>Complete 2010-2019 reading and cloze before Feb 2024.</p>
+    <p>Spend 2 months on 2000-2009 reading and cloze.</p>
+    <p>Spend 2 months on 2000-2019 new question types and translation.</p>
+    <p>Details to be finalized</p>
+    <br>
+    <p>It's worth mentioning that the strategy guide for CET-4 has been completed. The guide for CET-6 will be available before July 2024.</p>
+    <p>As for TEM-4 and TEM-8, the strategy guides are still pending.</p>
+    <br>
   </div>
   
   <div id="Cloze" class="section">
