--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@ body.dark-theme {
     <li><a href="#" data-target="Reading Comprehension">Reading Comprehension</a></li>
     <li><a href="#" data-target="New question types">New question types</a></li>
     <li><a href="#" data-target="Translation">Translation</a></li>
+    <li><a href="#" data-target="CET Long Reading">CET Long Reading</a></li>
+    <li><a href="#" data-target="CET Short Reading">CET Short Reading</a></li>
+    <li><a href="#" data-target="TEM Four">TEM Four</a></li>
+    <li><a href="#" data-target="TEM Eight">TEM Eight</a></li>
   </ul>
 </div>
 
@@ -259,6 +263,27 @@ body.dark-theme {
     <h2>Translation</h2>
     <p>Content for Translation here...</p>
   </div>
+
+  <div id="CET Long Reading" class="section">
+    <h2>CET Long Reading</h2>
+    <p>Content for CET Long Reading here...</p>
+  </div>
+
+  <div id="CET Short Reading" class="section">
+    <h2>CET Long Reading</h2>
+    <p>Content for CET Long Reading here...</p>
+  </div>
+
+  <div id="TEM Four" class="section">
+    <h2>TEM Four</h2>
+    <p>Content for TEM Four here...</p>
+  </div>
+
+  <div id="TEM Eight" class="section">
+    <h2>TEM Eight</h2>
+    <p>Content for TEM Eight here...</p>
+  </div>
+  
   
 </div>
   
