--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
   font-size:28px;
   }
   
+/* 浅色模式 */
+body {
+  background-color: #f2f2f2;
+}
+
+/* 深色模式 */
 body.dark-theme {
   background-color: #333;
   color: #eee;
@@ -48,6 +54,13 @@ body.dark-theme {
   position: fixed;
   top: 6%;
   left: 100px;
+  background-color: #fff; 
+  border: 1px solid transparent;
+}
+
+/* 深色模式 */  
+body.dark-theme #theme-toggle {
+  background-color: #555;
 }
   
 .sub-sidebar {
@@ -86,7 +99,7 @@ body.dark-theme {
 </head>
 <body>
 
-<button id="theme-toggle">Change Theme</button>
+<button id="theme-toggle">❂ Theme</button>
   
 <div class="sidebar">
   <ul id="top-menu">
@@ -314,11 +327,31 @@ $sidebarLinks.forEach(link => {
     });
   });
 });
-  
+
 const toggle = document.getElementById('theme-toggle');
 
+function setToggleBg() {
+  const bodyBgColor = getComputedStyle(document.body).backgroundColor;
+  toggle.style.backgroundColor = bodyBgColor;
+}
+
+// 初始化
+setToggleBg();
+
+// 切换主题时更新
 toggle.addEventListener('click', () => {
+
+  // 切换 body 主题类
   document.body.classList.toggle('dark-theme');
+
+  // 切换按钮背景色
+  if(document.body.classList.contains('dark-theme')) {
+    toggle.style.backgroundColor = '#555';
+  } else {
+    toggle.style.backgroundColor = '#fff';
+  }
+  
+  setToggleBg(); 
 });
   
 </script>
