--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@ body.dark-theme {
 #theme-toggle {
   position: fixed;
   top: 6%;
-  left: 100px;
+  left: 30px;
   background-color: #fff; 
   border: 1px solid transparent;
+  font-size:30px;
 }
 
 /* 深色模式 */  
