--- a/index.html
+++ b/index.html
@@ -285,7 +285,134 @@ body.dark-theme #theme-toggle {
 
   <div id="CET Short Reading" class="section">
     <h2>CET Long Reading</h2>
-    <p>Content for CET Long Reading here...</p>
+    <h3>正宗的偷鸡，纯纯的摸狗(bushi)</h3>
+    <p>1、选择题有几道，就把文章分为几个部分
+<br>
+第一题，对应第一部分，以此类推
+<br>
+至于这个部分是一整段还是几个句子，你就要用定位词去判断
+<br>
+<br>
+2、文章的重点
+<br>
+你放心，和语文论述类语文一样
+<br>
+在于议论句，大部分情况下也在每段的首尾句
+<br>
+而在这开头和结尾，你要学会根据一些形容词和副词，来判断作者的态度
+<br>
+这个懂的都懂
+<br>
+<br>
+3、选项的重点在哪里
+<br>
+重点，即题眼
+<br>
+是在修饰句前的那个名词，通常出现在材料的后半部分
+<br>
+名词对的上，就能入选
+<br>
+<br>
+举个例子: A.Not all of them are symptoms of dementia.
+<br>
+在这一句里，重点有且仅有symptoms of dementia
+<br>
+Not all of them，是修饰句，毫无卵用
+<br>
+<br>
+再举一个例子：A.Our interaction skills deteriorate. 
+<br>
+重点有且仅有 interaction skills，其他部分卵用没有
+<br>
+<br>
+4、做题的顺序
+<br>
+第一步，直接读题目，再回去看文章
+<br>
+目的在于初步确定文章主题
+<br>
+<br>
+第二步，用各题题眼简单确定段落范围
+<br>
+如果你看到第二题有名词定位，那么直接定位到那里
+<br>
+前面的就是第一段的材料，以此类推
+<br>
+这一步对于那些段落很少的文章，就显得很没必要
+<br>
+但是对于那些每段很少的文章
+<br>
+这种时候用下一题帮助定位就显得很有必要
+<br>
+<br>
+第三步，找到选项中的名词，其他一律掉丢
+<br>
+主要判断3个东西，时态、主语、题眼
+<br>
+当然这一步可以提前或者置后，看题目
+<br>
+<br>
+第四步，根据材料的其他部分，定位文章的具体内容
+<br>
+主要是专有名词和特有的定位词
+<br>
+<br>
+第五步，找议论句，结合首尾句判断论点
+<br>
+首尾句不一定需要，重点是议论句
+<br>
+中间必有议论句，可能是在某个长难句的一部分
+<br>
+和第二步一样，这一步主要针对的是概述题
+<br>
+<br>
+第六步，简单翻译原文，看能否和选项完美对应
+<br>
+重点在于：主体、时态
+<br>
+接下来才去比对名词，判断程度、因果什么的
+<br>
+关键词对不上但意思有点联系就保留
+<br>
+有更好的就不选这个，没有更好的就选这个
+<br>
+<br>
+第七步，用句子结构与核心论点再比对
+<br>
+一般针对最后一题的概述
+<br>
+<br>
+用首尾段推核心论点或者直接看尾段推
+<br>
+但如果最后一题是材料题，就显得没有必要了
+<br>
+同第二步、第五步
+<br>
+<br>
+<br>
+当然上面这个只是针对大部分题，你要做题去试
+<br>
+有时候先找定位再找议论句更快，有时候先找议论句再找定位更快
+<br>
+有些题用句子结构直接秒了，有些题用核心论点更好
+<br>
+这个得多用题去试试
+<br>
+但是一般前四题到第六步就能解出来，最后一题可能需要用到核心论点或者句子结构
+<br>
+
+<br>
+如果是概述题，要你概述某段的东西去选的
+<br>
+那么就是直接456，看情况上7
+<br>
+
+<br>
+先看首尾句，再找议论句，接着利用这些句子串起来确定论点
+<br>
+这个是概述题的通法
+<br>
+当然你把段改成整个文章，其实就是阅读最后一题的通法</p>
   </div>
 
   <div id="TEM Four" class="section">
@@ -300,6 +427,10 @@ body.dark-theme #theme-toggle {
   
   
 </div>
+
+
+
+
   
 <script>
 // 获取所有一级菜单项和对应的二级菜单
