--- a/index.html
+++ b/index.html
@@ -327,16 +327,15 @@ Not all of them，是修饰句，毫无卵用
 <br>
 4、做题的顺序
 <br>
-第一步，直接读题目，再回去看文章
-<br>
+<h3>第一步，直接读题目，再回去看文章</h3>
 目的在于初步确定文章主题
 <br>
 <br>
-第二步，用各题题眼简单确定段落范围
-<br>
+<h3>第二步，用各题题眼简单确定段落范围</h3>
 如果你看到第二题有名词定位，那么直接定位到那里
 <br>
 前面的就是第一段的材料，以此类推
+<br>
 <br>
 这一步对于那些段落很少的文章，就显得很没必要
 <br>
@@ -345,20 +344,17 @@ Not all of them，是修饰句，毫无卵用
 这种时候用下一题帮助定位就显得很有必要
 <br>
 <br>
-第三步，找到选项中的名词，其他一律掉丢
-<br>
+<h3>第三步，找到选项中的名词，其他一律掉丢</h3>
 主要判断3个东西，时态、主语、题眼
 <br>
 当然这一步可以提前或者置后，看题目
 <br>
 <br>
-第四步，根据材料的其他部分，定位文章的具体内容
-<br>
+<h3>第四步，根据材料的其他部分，定位文章的具体内容</h3>
 主要是专有名词和特有的定位词
 <br>
 <br>
-第五步，找议论句，结合首尾句判断论点
-<br>
+<h3>第五步，找议论句，结合首尾句判断论点</h3>
 首尾句不一定需要，重点是议论句
 <br>
 中间必有议论句，可能是在某个长难句的一部分
@@ -366,8 +362,7 @@ Not all of them，是修饰句，毫无卵用
 和第二步一样，这一步主要针对的是概述题
 <br>
 <br>
-第六步，简单翻译原文，看能否和选项完美对应
-<br>
+<h3>第六步，简单翻译原文，看能否和选项完美对应</h3>
 重点在于：主体、时态
 <br>
 接下来才去比对名词，判断程度、因果什么的
@@ -377,8 +372,7 @@ Not all of them，是修饰句，毫无卵用
 有更好的就不选这个，没有更好的就选这个
 <br>
 <br>
-第七步，用句子结构与核心论点再比对
-<br>
+<h3>第七步，用句子结构与核心论点再比对</h3>
 一般针对最后一题的概述
 <br>
 <br>
@@ -413,6 +407,8 @@ Not all of them，是修饰句，毫无卵用
 这个是概述题的通法
 <br>
 当然你把段改成整个文章，其实就是阅读最后一题的通法</p>
+<p>具体还是要看看题</p>
+<br>
   </div>
 
   <div id="TEM Four" class="section">
