--- a/index.html
+++ b/index.html
@@ -297,8 +297,7 @@ body.dark-theme #theme-toggle {
 <br>
 你放心，和语文论述类语文一样
 <br>
-在于议论句，大部分情况下也在每段的首尾句
-<br>
+<h3>在于议论句，大部分情况下也在每段的首尾句</h3>
 而在这开头和结尾，你要学会根据一些形容词和副词，来判断作者的态度
 <br>
 这个懂的都懂
