--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ body.dark-theme #theme-toggle {
   </div>
 
   <div id="CET Short Reading" class="section">
-    <h2>CET Long Reading</h2>
+    <h2>CET Short Reading</h2>
     <h3>正宗的偷鸡，纯纯的摸狗(bushi)</h3>
     <p>1、选择题有几道，就把文章分为几个部分
 <br>
@@ -410,6 +410,13 @@ Not all of them，是修饰句，毫无卵用
 <br>
   </div>
 
+  <div id="CET Short Reading-menu" class="sub-sidebar">
+    <ul>
+        <li><a href="https://flying-chopiner.github.io/CET-Short-Reading">CET-4</a></li>
+    </ul>
+  </div>
+
+  
   <div id="TEM Four" class="section">
     <h2>TEM Four</h2>
     <p>Content for TEM Four here...</p>
