--- a/index.html
+++ b/index.html
@@ -410,9 +410,10 @@ Not all of them，是修饰句，毫无卵用
 <br>
   </div>
 
-  <div id="CET Short Reading-menu" class="sub-sidebar">
+  <div id="CET Short Reading-sub-menu" class="sub-sidebar">
     <ul>
-        <li><a href="https://flying-chopiner.github.io/CET-Short-Reading">CET-4</a></li>
+        <li><a href="https://flying-chopiner.github.io/CET-Short-Reading-CET4">CET-4</a></li>
+        <li><a href="https://flying-chopiner.github.io/CET-Short-Reading-CET6">CET-6</a></li>
     </ul>
   </div>
 
