--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body.dark-theme #theme-toggle {
 </head>
 <body>
 
-<button id="theme-toggle">❂ Theme</button>
+<button id="theme-toggle">❂ Theme By Flying Chopiner </button>
   
 <div class="sidebar">
   <ul id="top-menu">
