--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@ body.dark-theme {
 #theme-toggle {
   position: fixed;
   top: 6%;
+  left:40px;
   background-color: #fff; 
   border: 1px solid transparent;
-  font-size:27px;
+  font-size:40px;
 }
 
 /* 深色模式 */  
@@ -99,7 +100,7 @@ body.dark-theme #theme-toggle {
 </head>
 <body>
 
-<button id="theme-toggle">❂ Theme By Flying Chopiner </button>
+<button id="theme-toggle">❂ Theme</button>
   
 <div class="sidebar">
   <ul id="top-menu">
