--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@ body.dark-theme #theme-toggle {
 
   <div id="Changelog" class="section">
       <h2>ChangeLog</h2>
-      <p>2024-01-04: Created the web page structure.</p>
+      <p>2024-01-01: Created the web page structure.</p>
+      <p>2024-01-04: Added "CET-4" to the CET Short Reading.</p>
       <p>2024-01-06: Added "2019 reading" to the Reading Comprehension.</p>
+      
   </div>
 
   <div id="Schedule" class="section">
