--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ body.dark-theme #theme-toggle {
     <li><a href="#" data-target="CET Short Reading">CET Short Reading</a></li>
     <li><a href="#" data-target="TEM Four">TEM Four</a></li>
     <li><a href="#" data-target="TEM Eight">TEM Eight</a></li>
+    <li><a href="#" data-target="Game">Game</a></li>
   </ul>
 </div>
 
@@ -429,7 +430,13 @@ Not all of them，是修饰句，毫无卵用
     <h2>TEM Eight</h2>
     <p>Content for TEM Eight here...</p>
   </div>
-  
+
+  <div id="Game" class="section">
+    <h2>Game</h2>
+    <p>This is a collection of small games I've created for entertainment during boring times.</p>
+    <p>Each game doesn't have many levels, but I believe the difficulty is still challenging. </p>
+    <p>I might consider offering some rewards after completing all levels once the question sets are updated. Stay tuned for more.</p>
+  </div>
   
 </div>
 
