--- a/index.html
+++ b/index.html
@@ -419,7 +419,6 @@ Not all of them，是修饰句，毫无卵用
         <li><a href="https://flying-chopiner.github.io/CET-Short-Reading-CET6">CET-6</a></li>
     </ul>
   </div>
-
   
   <div id="TEM Four" class="section">
     <h2>TEM Four</h2>
@@ -437,12 +436,18 @@ Not all of them，是修饰句，毫无卵用
     <p>Each game doesn't have many levels, but I believe the difficulty is still challenging. </p>
     <p>I might consider offering some rewards after completing all levels once the question sets are updated. Stay tuned for more.</p>
   </div>
-    <h3><a href="https://flying-chopiner.github.io/2Dgame/">Paddle Master</a></h3>
+    <h3>Paddle Master</h3>
     <p>This is a game where you use the left and right arrow keys on the mouse to control the paddle at the bottom of the screen to bounce the ball.</p>
     <p>The speed of the ball and the player's score are displayed in the upper left and right corners, respectively.</p>
     <p>You can simply open the game to play, and if you want to return here, just press the Enter key.</p>
     <p>When the player's score reaches a certain target, they will win. Before that, the speed of the ball will continue to increase. Good luck, young warrior!</p>
 </div>
+
+  <div id="Game-sub-menu" class="sub-sidebar">
+    <ul>
+        <li><a href="https://flying-chopiner.github.io/2Dgame/">Paddle Master</a></li>
+    </ul>
+  </div>
 
 
 
