--- a/index.html
+++ b/index.html
@@ -436,9 +436,9 @@ Not all of them，是修饰句，毫无卵用
     <p>Each game doesn't have many levels, but I believe the difficulty is still challenging. </p>
     <p>I might consider offering some rewards after completing all levels once the question sets are updated. Stay tuned for more.</p>
     <h3>Paddle Master</h3>
-    <p>This is a game where you use the left and right arrow keys on the mouse to control the paddle at the bottom of the screen to bounce the ball.</p>
-    <p>The speed of the ball and the player's score are displayed in the upper left and right corners, respectively.</p>
-    <p>You can simply open the game to play, and if you want to return here, just press the Enter key.</p>
+    <p>This is a game where you use the left and right arrow keys on the mouse to control the paddle at the bottom of the screen to bounce the ball.
+    The speed of the ball and the player's score are displayed in the upper left and right corners, respectively.
+    You can simply open the game to play, and if you want to return here, just press the Enter key.</p>
     <p>When the player's score reaches a certain target, they will win. Before that, the speed of the ball will continue to increase. Good luck, young warrior!</p>
   </div>
 
