--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@ body.dark-theme #theme-toggle {
 
   <div id="Schedule" class="section">
     <h2>Schedule</h2>
-    <h3>While the schedule may not be a perfect oracle of what's to come,</h3>
-    <h3>it is my aspiration that it serves as a faithful chronicle of our journey.</h3>
+    <h3>While the schedule may not be a perfect oracle of what's to come,
+    it is my aspiration that it serves as a faithful chronicle of our journey.</h3>
     <p>The preliminary plan is to finish reading comprehension and cloze tests from 2010 to 2019, a total of 10 years, before February 2024. </p>
     <p>Then it will take around 2 more months to go over reading comprehension and cloze tests from 2000 to 2009. </p>
     <p>Finally, another 2 months will be spent on new question types and translation exercises from 2000 to 2019. </p>
