--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@ Not all of them，是修饰句，毫无卵用
 
   <div id="Game" class="section">
     <h2>Game</h2>
-    <p>This is a collection of small games I've created for entertainment during boring times.</p>
-    <p>Each game doesn't have many levels, but I believe the difficulty is still challenging. </p>
-    <p>I might consider offering some rewards after completing all levels once the question sets are updated. Stay tuned for more.</p>
+    <p>This is a collection of small games I've created for entertainment during boring times.
+    Each game doesn't have many levels, but I believe the difficulty is still challenging.
+    I might consider offering some rewards after completing all levels once the question sets are updated. Stay tuned for more.</p>
     <h3>Paddle Master</h3>
     <p>This is a game where you use the left and right arrow keys on the mouse to control the paddle at the bottom of the screen to bounce the ball.
     The speed of the ball and the player's score are displayed in the upper left and right corners, respectively.
